--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
