--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2"
